...
    <string name="error_otp_required">Ellenőrző kód megadása kötelező!</string>

    <string name="register">Regisztráció</string>
    <string name="password_confirm">Jelszó újra</string>
    <string name="register_button">Fiók létrehozása</string>
    <string name="register_to_login">Már van fiókod? Lépj be!</string>
    <string name="error_email_required">E-mail cím megadása kötelező!</string>
    <string name="error_password_required">Jelszó megadása kötelező!</string>
    <string name="error_password_confirm_required">Jelszó megerősítése kötelező!</string>
    <string name="error_passwords_mismatch">A jelszavak nem egyeznek!</string>
    <string name="error_password_too_short">A jelszónak legalább 6 karakter hosszúnak kell lennie!</string>
    <string name="error_email_registered">Ez az e-mail cím már regisztrálva van.</string>
    <string name="error_network">Hálózati hiba: %s</string>
    <string name="success_registration">Sikeres regisztráció! Most már bejelentkezhetsz.</string>
    <string name="error_invalid_email">Adjon meg egy érvényes e-mail címet!</string>
    <string name="error_weak_password">A jelszónak min. 8 karakterből kell állnia, tartalmaznia kell kis/nagybetűt, számot és speciális karaktert.</string>

    <string name="logout">Kijelentkezés</string>
    <string name="logout_message">Biztosan ki szeretnél jelentkezni?</string>
    <string name="success_logout">Sikeres kijelentkezés.</string>
    <string name="language_select">Nyelv kiválasztása</string>
    <string name="profile_section_label">Profil</string>
...
